# camelot

./: .#README.md  .#equalitytest.ml  .gitignore  .merlin  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  apply.ml  arthur.json  arthur.yaml  camelot  camelot-canonical.opam  camelot-report.opam  camelot-style.opam  camelot-traverse.opam  camelot-utils.opam  camelot.install  camelot.opam  checkers.opam  descent.ml  destructtest.ml  dune-project  equalitytest.ml  linter.ml  linter.mli  linter.native  linterator.ml  main.ml  test.ml  tmp.ml  tmp2.ml  traverse.ml  utils.ml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: workflow.yml
_build/: _digests  _log  linter.cmi  linter.cmo  linter.cmx  linter.ml  linter.ml.depends  ocamlc.where  utils.cmi  utils.cmo  utils.cmx  utils.ml.depends
_build/checkers/: check.cmi  check.cmo  check.cmx  check.ml  check.ml.depends  ifreturnslit.cmi  ifreturnslit.cmo  ifreturnslit.cmx  ifreturnslit.ml.depends  report.cmi  report.cmo  report.cmx  report.ml.depends
checkers/: astutils.ml  check.ml  hofcheck.ml  ifreturnslit.ml  pat.ml  report.ml  simplebexp.ml  simpleeq.ml  simplepat.ml  style.ml
examples/: a.out  equality.cmi  equality.cmo  equality.ml  examples.ml  hof.ml  if.ml  lexical.ml  match.ml  matchtest.ml  verbose.ml
lib/: .merlin
lib/arthur/: 3  arthur.ml  arthur.mli  arthur.yaml  arthur_parse.ml  dune
lib/astutils/: .merlin  astutils.ml  dune
lib/canonical/: .#canonical.ml  .merlin  dune  (+6 more)
test/: bexptest.ml  destructtest.ml  dune  equalitytest.ml  hoftest.ml  test.ml
(+42 files in other folders)
